[gd_scene load_steps=15 format=1]

[ext_resource path="res://Scripts/Gui.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/glassPanel.png" type="Texture" id=2]
[ext_resource path="res://Sprites/BarraEnergiaUnder.png" type="Texture" id=3]
[ext_resource path="res://Sprites/BarraEnergiaProgress.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/kenvector_future.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/UI/metalPanel.png" type="Texture" id=6]
[ext_resource path="res://Escenas/Poder_Gui.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 10.0
margin/right = 10.0
margin/top = 10.0
margin/bottom = 10.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.095727, 0.59375, 0.0394287, 1 )
light_color = Color( 0.0871582, 0.65625, 0.242769, 1 )
dark_color = Color( 0.0151062, 0.175781, 0.0364459, 1 )
border_size = 3
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.898438, 0.0456238, 0.0456238, 1 )
light_color = Color( 0.972656, 0.235565, 0.235565, 1 )
dark_color = Color( 0.652344, 0.0433197, 0.0433197, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 10.0
margin/right = 10.0
margin/top = 10.0
margin/bottom = 10.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="DynamicFont" id=5]

font/size = 16
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]

font/size = 16
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="Gui" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="PanelPlaneta" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 370.0
margin/bottom = 40.0
custom_styles/panel = SubResource( 1 )

[node name="Planeta" type="Label" parent="PanelPlaneta"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 13.0
margin/top = 11.0
margin/right = 70.0
margin/bottom = 25.0
text = "PLANETA"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ProgressBar" type="ProgressBar" parent="PanelPlaneta/Planeta"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 73.0
margin/top = -4.0
margin/right = 233.0
margin/bottom = 16.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 2.0
range/exp_edit = false
range/rounded = true
percent/visible = false

[node name="PanelEnergia" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 669.0
margin/top = 0.0
margin/right = 1025.0
margin/bottom = 42.0
custom_styles/panel = SubResource( 4 )

[node name="Energia" type="Label" parent="PanelEnergia"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 17.0
margin/top = 12.0
margin/right = 135.0
margin/bottom = 26.0
text = "TIRADOR"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ProgressBar" type="TextureProgress" parent="PanelEnergia/Energia"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = -4.0
margin/right = 220.0
margin/bottom = 17.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 2.0
range/exp_edit = false
range/rounded = true
texture/under = ExtResource( 3 )
texture/over = null
texture/progress = ExtResource( 4 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="Puntaje" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 272.0
margin/top = 28.0
margin/right = 593.0
margin/bottom = 42.0
custom_fonts/font = SubResource( 5 )
text = "TEST"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Wave" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 272.0
margin/top = 6.0
margin/right = 593.0
margin/bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "TEST"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PanelPoderR" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 513.0
margin/right = 135.0
margin/bottom = 588.0
custom_styles/panel = SubResource( 7 )

[node name="PoderRecolector" parent="PanelPoderR" instance=ExtResource( 7 )]

margin/left = 2.0
margin/top = 2.0
margin/right = 72.0
margin/bottom = 72.0

[node name="PanelPoderT" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 890.0
margin/top = 513.0
margin/right = 965.0
margin/bottom = 588.0
custom_styles/panel = SubResource( 7 )

[node name="PoderTirador" parent="PanelPoderT" instance=ExtResource( 7 )]

margin/left = 3.0
margin/top = 3.0
margin/right = 73.0
margin/bottom = 73.0


